--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,35 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<header>
-  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-      <li class="nav-item">
-          <a class="nav-link active" data-toggle="pill" href="index.html" >Home</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="project.html">Project</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link"  href="client.html">Client</a>
-      </li>
-  </ul>
-</header>
 
-
-<div class="container-fluid">
-  <div class="primary imgbg text-center">
-    <div>
-      <h1 class="text-light">TURNTABL CLIENT MANAGEMENT SYSTEM</h1>
-      <h2 class="text-warning mb-5">( TCMS )</h2>
-      <!-- <h3>A client management system for Turntabl clients that allows deletion, update, addition and display of clientele.</h3> -->
-      <a href="#" class="btn btn-success btn-lg w-25 rounded"> Get in Touch</a>
-    </div>
-   </div>
-</div>
-
-<footer class="footer my-5">
-
-</footer>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -44,5 +16,21 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
+<header>
+  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+      <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" routerLink="/home" >Home</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/projects">Project</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/customers">Client</a>
+      </li>
+      <li class ="nav nav-item">
+        <a class="nav-link" routerLink="/reports">Reports</a>
+      </li>
+  </ul>
+</header>
 
 <router-outlet></router-outlet>
