--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,22 +1,39 @@
-<div class="row row-cols-1 row-cols-md-3">
-    <div class ="col mb-4">
-        <div class="card h-100">
-            <img src="" class="card-img-top" alt="">
-        <div class="card-body">
-            <h5 class="card-title">Number of Projects</h5>
-            <p class="card-text">This reports on the number of projects acquired in a month</p>
-        </div>
-        </div>
-    </div>
-
-    <div class="col mb-5">
-        <div class="card h-100">
-            <img src="" class="card-img-top" alt="">
+<div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Number of completed Projects</h5>
-                <p class="card-text">This gives a detailed number of completed projects</p>
-
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
+          </div>
         </div>
-    </div>
-</div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
