--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -2,47 +2,51 @@
     
     <!--Customers Table -->
 
-    <div class="card mb-4 shadow p-4 mb-6 bg- white rounded" style="margin-top:-90px;">
+<div class="card mb-4 shadow p-4 mb-6 bg- white rounded" style="margin-top:-90px;">
     <form class="form-inlinr md-form form-sm active-cyan-3 mt-3" style="margin-left:20px;">
-    <input class="form-contril-sm mr-4 w-75" type="text" placeholder="Search for a customer" aria-label="Search">
-    <i class="fas fa-search" aria-hidden="true"></i>
+        <input class="form-contril-sm mr-4 w-75" type="text" placeholder="Search for a customer" aria-label="Search">
+        <i class="fas fa-search" aria-hidden="true"></i>
     </form>
+
     <h2 id="customers" style="margin-top:20px;">Customers Details</h2>
     
     <div class="card-body">
-<div class="table-responsive">
-    <table class="table">
-        <thead class="thead-dark">
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">FirstName</th>
-            <th scope="col">LastName</th>
-            <th scope="col">Contact Number</th>
-            <th scope="col">Address</th>
-            <th scope="col">Email</th>
-            <th scope="col">Actions</th>
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let customer of customers">
-            <th scope="row">{{customer.id}}</th>
-            <td>{{customer.FirstName}}</td>
-            <td>{{customer.LastName}}</td>
-            <td>{{customer.Contact}}</td>
-            <td>{{customer.Email}}</td>
-            <td>{{customer.Address}}</td>
-            <td>
-                <button type="button" class="btn btn-primary"><i class="far fa-eye"></i> </button>
-                <button type="button" class="btn btn-primary"><i class="fas fa-edit"></i> </button>
-                <button type="button" class="btn btn-primary"><i class="far fa-trash-alt"></i> </button>
-    
-            </td>
-        </tr>
 
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Address</th>
+                <th scope="col">Telephone</th>
+                <th scope="col">Level</th>
+                <th scope="col">Actions</th>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let customer of customers">
+                <th scope="row">{{customer.customer_id}}</th>
+                <td>{{customer.customer_name}}</td>
+                <td>{{customer.customer_email}}</td>
+                <td>{{customer.customer_address}}</td>
+                <td>{{customer.customer_telephone}}</td>
+                <td>{{customer.customer_leve}}</td>
+                <td>
+                    <button type="button" class="btn btn-primary"><i class="far fa-eye"></i> </button>
+                    <button type="button" class="btn btn-primary"><i class="fas fa-edit"></i> </button>
+                    <button type="button" class="btn btn-primary"><i class="far fa-trash-alt"></i> </button>
+        
+                </td>
+            </tr>
+
+            </tbody>
+
+            </table>
+        </div>
+    </div>
 </div>
-    </div>
-    </div>
     
