added add functionality in reactive forms

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,7 +9,7 @@
     </thead>
     <tbody>
     <tr>
-        <th scope="row">{{project.project_id}}</th>
+        <th scope="row">1</th>
         <td>Concurrency</td>
         <td>Threads, Memory, Garbage Collection</td>
     </tr>
